# ChangeLog for app-vim/gentoo-syntax
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/gentoo-syntax/ChangeLog,v 1.122 2010/07/05 09:22:23 ssuominen Exp $

  05 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  gentoo-syntax-20100215.ebuild:
  ppc64 stable wrt #313755

  12 Jun 2010; Jeremy Olexa <darkside@gentoo.org>
  -gentoo-syntax-20090220.ebuild, metadata.xml:
  Update metadata and remove old

  16 May 2010; Markos Chandras <hwoarang@gentoo.org>
  gentoo-syntax-20100215.ebuild:
  Stable on amd64 wrt bug #313755. Thanks to Roeland Douma
  <roeland@rullzer.com>

  18 Apr 2010; <nixnut@gentoo.org> gentoo-syntax-20100215.ebuild:
  ppc stable #313755

  13 Apr 2010; Raúl Porcel <armin76@gentoo.org>
  gentoo-syntax-20100215.ebuild:
  alpha/arm/ia64/m68k/s390/sh stable wrt #313755

  13 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gentoo-syntax-20100215.ebuild:
  x86 stable wrt bug #313755

  09 Apr 2010; Tiago Cunha <tcunha@gentoo.org>
  gentoo-syntax-20100215.ebuild:
  stable sparc, bug 313755

  09 Apr 2010; Jeroen Roovers <jer@gentoo.org>
  gentoo-syntax-20100215.ebuild:
  Stable for HPPA (bug #313755).

  12 Mar 2010; Markos Chandras <hwoarang@gentoo.org>
  gentoo-syntax-20090720.ebuild:
  Stable on amd64 wrt bug #304805

  10 Mar 2010; Fabian Groffen <grobian@gentoo.org>
  gentoo-syntax-20100215.ebuild:
  Marked ~ia64-hpux

  05 Mar 2010; Markus Duft <mduft@gentoo.org> gentoo-syntax-20090720.ebuild,
  gentoo-syntax-20100215.ebuild:
  re-added ~x86-interix keyword

  02 Mar 2010; Jeroen Roovers <jer@gentoo.org>
  gentoo-syntax-20090720.ebuild:
  Stable for HPPA (bug #304805).

  25 Feb 2010; Raúl Porcel <armin76@gentoo.org>
  gentoo-syntax-20090720.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #304805

  25 Feb 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gentoo-syntax-20090720.ebuild:
  x86 stable, bug #304805

  18 Feb 2010; Tiago Cunha <tcunha@gentoo.org>