@@ -1,6 +1,18 @@
-DIST gentoo-syntax-20090720.tar.bz2 17859 RMD160 b4170eb2d0ad1c203cce0827a7309e292a330abc SHA1 34659d0d32431d23b22d7503892d3c4d8b2656c0 SHA256 bfda7b18f96015ad0059148038e3cf571d412b27412e12d6ff2911481b4baddb
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST gentoo-syntax-20100215.tar.bz2 17973 RMD160 0cf95b65ca0e63615f12295635f2ba2876273063 SHA1 df927068f9a38d841d2829b88f9df023e3c70abb SHA256 01f420bf5d9f6fbdb8d8d3a7d476d478a2609c2509c14d08ce0ac73cab24bf7d
-EBUILD gentoo-syntax-20090720.ebuild 1870 RMD160 073b6705cf2ce28262461520003def231dfd8c04 SHA1 630010cc3f3b3fc3797f2ab629141d1d61fab002 SHA256 88119c0b668170a89f78753ff27404a9d86aa7c2853c723dc53b225fa1112ca5
 EBUILD gentoo-syntax-20100215.ebuild 1883 RMD160 b23a234c5804e35d36c5869d56b0cfaba718b2fa SHA1 0882c981daf3738fafece8b9303abf52d8e8f89f SHA256 ce224304852deddb6d5d195060931f437c3888d99e85e7567a249381651bd014
-MISC ChangeLog 19337 RMD160 c2df519ad1ba4099de6efb0fdcc05a6d8fbc5c64 SHA1 bc843e4f3a2b32adfa550159142355d64e225569 SHA256 dd3b1009aa30c69e2d075134b92208b01135d0d6eea1d14c5316f80799c93454
+MISC ChangeLog 19423 RMD160 2a926d54a84a16afb24e46c9a4fbabefbd2295bd SHA1 e6b43646e32fa241b163866e5448f25de5d06292 SHA256 2d4eebbe72cf0b823d1d93a309db38c99966459ca42abf4fa6f766a46cbdd7cf
 MISC metadata.xml 466 RMD160 a8e6cb336ce41f69a23d1ed0841b81beac168835 SHA1 316e6499ef539833e15d2c630dadf18c8b46ba96 SHA256 63ef3370b3d478298382f31eb22b6d30d6f3ab4c7cfbed31e144a9dd5062326e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.15 (GNU/Linux)
+
+iQEcBAEBCgAGBQJMMi19AAoJEAWF714uGAc6exIIAJzacMjJhU4g3Ww0BxPlioG9
+4eZBYdDTnGFHlHG0XGhzc6B9u02aEV5hjS71xED6EmP6LT2PNc30BUI+bRmSyf2P
+hMM91yN7uyfS/wAcrqq44gq0VlcI4OD+/XJ7oLsz0M7rSe1Jdo0DAVM2Nv2Ghbt9
+zHto1jWPLh9R0RzujaXJELRgR1R1LFHy6fuyoOG7lCFnhqQIF3Obq/I74zFFHuuq
+FOtNkOnd4vCHEz0l69ZQOuewbKqLgIyn+7lL4fw2ubimatoSBiEvNB1jqV0JWZxS
+vLpo+Itsg0iLwwUf0ppaoz9Xby7j13kjHsy93oTdjSd/qrghhdb25ppz3vQMjcU=
+=szHs
+-----END PGP SIGNATURE-----
