@@ -1,6 +1,9 @@
 # ChangeLog for app-vim/gentoo-syntax
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/gentoo-syntax/ChangeLog,v 1.122 2010/07/05 09:22:23 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/gentoo-syntax/ChangeLog,v 1.123 2010/07/05 19:07:35 spatz Exp $
+
+  05 Jul 2010; Dror Levin <spatz@gentoo.org> -gentoo-syntax-20090720.ebuild:
+  Drop old.
 
   05 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
   gentoo-syntax-20100215.ebuild:
